k8s/seq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seq
spec:
  serviceName: "seq-service"
  replicas: 1
  selector:
    matchLabels:
      app: seq
  template:
    metadata:
      labels:
        app: seq
    spec:
      containers:
      - name: seq
        image: datalust/seq:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: seq-storage
  volumeClaimTemplates:
  - metadata:
      name: seq-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: seq-service
spec:
  selector:
    app: seq
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30004
